<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MeetInTheMiddle</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_contacts">Contacts</string>
    <string name="button_messages">Messages</string>
    <string name="button_meet">Meet</string>
    <string name="button_profile">Profile</string>
    <string name="button_questions">Questions?</string>
    <string name="button_settings">Settings</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="title_activity_display_messages">DisplayMessagesActivity</string>
    <string name="title_activity_display_meetings">DisplayMeetingsActivity</string>
    <string name="title_activity_display_profile">DisplayProfileActivity</string>
    <string name="title_activity_display_questions">DisplayQuestionsActivity</string>
    <string name="title_activity_display_settings">DisplaySettingsActivity</string>
    <string name="user_name">Name</string>
    <string name="user_mail">E-Mail</string>
    <string name="user_information">Benutzerdaten</string>
    

</resources>
